Fix overflow bugs on hero text

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
 
 h1 {
     font-family: "Press Start 2P", cursive;
-    font-size: 3em;
+    font-size: min(3rem, 12vw);
     text-shadow: 4px 4px var(--primary-dark-color);
 }
 
@@ -61,12 +61,14 @@ img {
     color: rgb(241, 241, 241);
     background-color: rgb(0, 110, 255);
     height: 100vh;
+    min-height: 200px;
     padding: 0.3em;
     text-align: center;
 }
 
 .sub-title {
     font-family: "Press Start 2P", cursive;
+    font-size: min(1.1rem, 5vw);
     text-align: center;
     text-shadow: 2px 2px var(--primary-dark-color);
 }
